<resources>
    <string name="app_name">My App Portfolio</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_title">My Nanodegree Apps!</string>
    <string name="spotify_app">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_app">BUILD IT BIGGER</string>
    <string name="bacon_app">BACON READER</string>
    <string name="capstone_app">CAPSTONE: MY OWN APP</string>

</resources>
